package project

import (
	"context"

	pbf "muxi-workbench-feed/proto"
	. "muxi-workbench-gateway/handler"
	"muxi-workbench-gateway/log"
	"muxi-workbench-gateway/pkg/errno"
	"muxi-workbench-gateway/service"
	"muxi-workbench-gateway/util"
	pbp "muxi-workbench-project/proto"

	"github.com/gin-gonic/gin"
	"go.uber.org/zap"
)

// CreateDoc creates a new doc
func CreateDoc(c *gin.Context) {
	log.Info("project createDoc function call.",
		zap.String("X-Request-Id", util.GetReqID(c)))

	// 获得请求
	var req CreateDocRequest
	if err := c.Bind(&req); err != nil {
		SendBadRequest(c, errno.ErrBind, nil, err.Error(), GetLine())
		return
	}

	// 获取 userid
	userID := c.MustGet("userID").(uint32)

	createDocReq := &pbp.CreateDocRequest{
		Title:     req.Title,
		Content:   req.Content,
		ProjectId: req.ProjectID,
		UserId:    userID,
	}
	_, err := service.ProjectClient.CreateDoc(context.Background(), createDocReq)
	if err != nil {
		SendError(c, errno.InternalServerError, nil, err.Error(), GetLine())
		return
	}

	/* --- 新增 feed --- */

	// 构造 push 请求
	pushReq := &pbf.PushRequest{
		Action: "创建",
		UserId: userID,
		Source: &pbf.Source{
			Kind:        3,
			Id:          0, // 暂时从前端获取
			Name:        req.DocName,
			ProjectId:   req.ProjectID,
			ProjectName: "",
		},
	}

	// 向 feed 发送请求
	_, err = service.FeedClient.Push(context.Background(), pushReq)
	if err != nil {
		SendError(c, errno.InternalServerError, nil, err.Error(), GetLine())
		return
	}

	SendResponse(c, errno.OK, nil)
}
